--- a/index.html/style.css
+++ b/index.html/style.css
@@ -136,12 +136,24 @@ span {
     font-size: 18px;
   }
 
+  .front h1 {
+    font-size: 2rem;
+  }
+
   .main-content p {
     font-size: 14px;
   }
 }
 
+.front {
+    text-align: center;
+    padding: 20px;
+}
 
+.front h1 {
+    font-size: 2.5rem;
+    font-family: Arial, Helvetica, sans-serif;
+}
 .main-content {
     max-width: 600px;
 }
